CME-1083 Fixed functional test failures